# yt-transcriber-python

./: .gitignore  main.py  po_token.json  pyproject.toml  requirements.txt
