[project]
name = "yt-vid-transcriber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "groq>=0.30.0",
    "python-dotenv>=1.1.1",
    "pytube>=15.0.0",
    "pytubefix>=9.4.1",
    "uvicorn>=0.27.0",
]
